# RAG_LLM

./: .env.template  .gitignore  README.md  config.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
cli/: __init__.py  __main__.py  auth_commands.py  chat_cli_interface.py  commands.py  component_cli.py
core/: __init__.py
core/auth/: __init__.py  context.py  conversation.py  session.py  user.py
core/classification/: __init__.py  classifier.py  ml_classifier.py
core/config/: __init__.py  base_paths.py  customer_config.py  defaults.py  paths.py  service.py  settings.py
core/conversation/: __init__.py  chat_integration.py  history.py  memory.py  models.py
core/generation/: rag_processor.py
core/llm/: __init__.py  base.py
docs/: batch_answers.xlsx  excel_loader_extractor_refactor.md
notebooks/: prodoc_compass.csv  prodoc_compass.parquet
scripts/: build_vector_index_from_html.py  check_python.py  check_row_classes.py  demo_logging_utils.py  direct_yaml_check.py  generate_api_docs.py  inspect_excel_file.py  lint_and_reorganize_config.py  minimal_debug_settings.py  run_rag_default_questions.py  setup_test_users.py  simple_loader_test.py  test_classification.py  test_cli_streaming.py  test_component_system.py  test_conversation.py  test_excel_end_to_end.py  test_excel_loader.py  test_excel_loader_inheritance.py  test_full_pipeline.py  test_metadata_schema.py  test_openai_embedding_isolation.py  test_parquet_pipeline.py  test_registry.py  test_relational_data_pipeline.py  test_vector_store_cli.py
tests/: conftest.py  test_ingestion.py
(+118 files in other folders)
